
innoextract 1.7 (TDB)
 - Added (preliminary) support for Inno Setup 5.6.0 installers
 - Fixed building in paths that contain regex expressions
 - Fixed case-sensitivity in parent directory when creating subdirectories

innoextract 1.6 (2016-03-24)
 - Added support for Inno Setup 5.5.7 (and 5.5.8) installers
 - Added a --collisions=rename-all option
 - Changed --collisions=rename to omit the suffix for the file that would have been extracted with --collisions=overwrite instead of the first encountered file
 - Fixed @lang suffix sometimes missing for the first file with the --collisions=rename option
 - Fixed build error with CMake 3.5
 - Now compiles in C++14 mode if supported
 - Unsafe characters in special constant strings (ie ':' in {code:…}) are now replaced with '$'
 - Windows: Fixed error message if the source file could not be opened
 - Windows: Fixed progress bar flickering while printing extracted filenames
 - Windows binaries: Fixed crash on platforms without AVX support

innoextract 1.5 (2015-09-24)
 - Added support for Inno Setup 5.5.6 installers
 - Added support for a modified Inno Setup 5.5.0 variant
 - Added support for building without iconv (Windows-1252 and UTF-16LE only)
 - Added warnings for .bin files that are not part of the installer
 - Added a simple --include (-I) option to filter files thanks to Alexandre Detiste
 - Added a --list-languages option to list available languages
 - Added a --exclude-temp (-m) option to not extract temporary files
 - Added a --language-only option to skip language-independent files
 - Added a --collisions option to abort or rename files on collision
 - Added a --default-language option to prefer a language in case of file collisions
 - Added a --gog-game-id option to print the GOG.com game ID for Galaxy-ready installers
 - Added a --gog (-g) option to extract additional .bin files using unrar or unar
 - Fixed handling of spaces in the --data-dir option
 - Fixed an infinite loop with truncated LZMA streams